--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.0",
     "@prisma/extension-accelerate": "^1.1.0",
+    "@yashsharma27/medium-common": "^1.0.4",
     "hono": "^4.5.10",
     "prisma": "^5.19.0"
   },
